k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: inventory-app
  labels:
    app: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: frontend
